@@ -1,3 +1,7 @@
+2004-01-19  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Support for exporting filesystem over NFS (see README.NFS)
+
 2004-01-14  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Support non-blocking writepage on 2.6.  This makes FUSE behave
